Added MCA protected endpoint
