# template/definitions/api.yaml
@@ -1,4 +1,11 @@
 paths:
+  /Products/protected:
+    get:
+      responses:
+        '200':
+          description: 200 OK
+      summary: ''
+      description: Protected endpoint. Only accessible after authentication with MCA Service.
   '/Products/image/{container}/{file}':
     get:
       responses:
